--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -16,8 +16,13 @@ html {
 }
 
 body {
-	background-color: $red;
-	// background-color: $bg-color;
+	// background-color: $red;
+	background-color: $bg-color;
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	left: 0;
+	top: 0;
 	overflow-x: hidden;
 	margin: 0 auto;
 	font-size: 12px;
