--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -18,11 +18,11 @@ html {
 body {
 	// background-color: $red;
 	background-color: $bg-color;
-	position: fixed;
-	width: 100vw;
-	height: 100vh;
-	left: 0;
-	top: 0;
+	// position: fixed;
+	// width: 100vw;
+	// height: 100vh;
+	// left: 0;
+	// top: 0;
 	overflow-x: hidden;
 	margin: 0 auto;
 	font-size: 12px;
