--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,65 +1,74 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 a {
-	color: #000
+  color: #000;
+}
+
+h2,
+p {
+  margin: 0;
+  padding: 0;
 }
 
 input:-webkit-autofill {
-	box-shadow: 0 0 0 1000px white inset;
-	-webkit-box-shadow: 0 0 0 1000px white inset;
+  box-shadow: 0 0 0 1000px white inset;
+  -webkit-box-shadow: 0 0 0 1000px white inset;
 }
 
 html {
-	-webkit-overflow-scrolling: touch;
+  -webkit-overflow-scrolling: touch;
 }
 
 body {
-	// background-color: $red;
-	background-color: $bg-color;
-	// position: fixed;
-	// width: 100vw;
-	// height: 100vh;
-	// left: 0;
-	// top: 0;
-	overflow-x: hidden;
-	margin: 0 auto;
-	font-size: 12px;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  // background-color: $red;
+  background-color: $bg-color;
+  // position: fixed;
+  // width: 100vw;
+  // height: 100vh;
+  // left: 0;
+  // top: 0;
+  overflow-x: hidden;
+  margin: 0 auto;
+  font-size: 12px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-button, input, textarea {
-    color: inherit;
-    font-size: 12px;
+button,
+input,
+textarea {
+  color: inherit;
+  font-size: 12px;
 }
 
 .view-router {
-	background-color: $bg-color;
-	height: 100vh;
-	overflow-y: auto;
-	padding-bottom: 50px;
-	box-sizing: border-box;
+  background-color: $bg-color;
+  height: 100vh;
+  overflow-y: auto;
+  padding-bottom: 50px;
+  box-sizing: border-box;
 }
 
 .full-page {
-	height: 100vh;
+  height: 100vh;
 }
 
 .scroll-wrap {
-	overflow-y: scroll;
+  overflow-y: scroll;
 }
 
 .round {
-	border-radius: 5px;
-	-webkit-transform:rotate(0deg);
-	transform:rotate(0deg);
+  border-radius: 5px;
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
 }
 
-.line-through{
-	text-decoration: line-through;
+.line-through {
+  text-decoration: line-through;
 }
 
-.border-none.van-hairline--top-bottom::after{
-	border-width:0;
+.border-none.van-hairline--top-bottom::after {
+  border-width: 0;
 }
