--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -72,3 +72,8 @@ textarea {
 .border-none.van-hairline--top-bottom::after {
   border-width: 0;
 }
+.van-nav-bar{
+  box-sizing: content-box;
+  padding-top: 20px;
+  height: 46px;
+}
