--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -76,4 +76,9 @@ textarea {
   box-sizing: content-box;
   padding-top: 20px;
   height: 46px;
+  .van-nav-bar__left{
+    .van-icon{
+      color: $red;
+    }
+  }
 }
