--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -32,8 +32,7 @@ body {
   overflow-x: hidden;
   margin: 0 auto;
   font-size: 12px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: PingFang SC,STHeitiSC-Light,Helvetica-Light,arial,sans-serif;
 }
 
 button,
@@ -89,4 +88,8 @@ textarea {
   overflow:hidden;
   white-space:nowrap;
   text-overflow:ellipsis;
+}
+
+.flex-0{
+  flex:0;
 }
